--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8"/>
-  <base href="<%= htmlWebpackPlugin.options.env.SITE_CDN_BASE || '/' %>">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
